--- a/web/index.html
+++ b/web/index.html
@@ -1,14 +1,33 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>LearnOpenGL in Rust (WASM)</title>
+    <style>
+        #canvas {
+            background-color: black;
+        }
+    </style>
 </head>
 <body>
 <canvas id="canvas" width="640" height="480"></canvas>
-<script src="./learn_opengl_rs.js"></script>
 <script type="module">
+    import * as app from "./learn_opengl_rs.js";
     import init from "./learn_opengl_rs.js";
 
-    init();
+    init().then(() => {
+        console.log("WASM Loaded");
+        const urlParams = new URLSearchParams(window.location.search);
+        const tutorial = urlParams.get('tutorial');
+        if (tutorial === null) {
+            console.log("Running default tutorial 1_2_1, Please use ?tutorial=1_2_1 to run a specific tutorial");
+            app.run_tutorial("1_2_1");
+        } else {
+            app.run_tutorial(tutorial);
+        }
+    });
 </script>
 </body>
 </html>
