refactor: refactor input, fix wasm update

--- a/web/index.html
+++ b/web/index.html
@@ -14,8 +14,8 @@
 <body>
 <canvas id="canvas" width="640" height="480"></canvas>
 <script type="module">
-    import * as app from "./learn_opengl_rs.js";
-    import init from "./learn_opengl_rs.js";
+    import * as app from "./lib_learn_opengl_rs.js";
+    import init from "./lib_learn_opengl_rs.js";
 
     init().then(() => {
         console.log("WASM Loaded");
