--- a/web/index.html
+++ b/web/index.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>LearnOpenGL in Rust (WASM)</title>
-    <style>
-        #canvas {
-            background-color: black;
-        }
-    </style>
+<!--    <style>-->
+<!--        #canvas {-->
+<!--            background-color: black;-->
+<!--        }-->
+<!--    </style>-->
 </head>
 <body>
-<canvas id="canvas" width="640" height="480"></canvas>
 <script type="module">
     import * as app from "./lib_learn_opengl_rs.js";
     import init from "./lib_learn_opengl_rs.js";
